tests/NormalTests/paczka1/fuzzy1/91437155.err
Error in line 2: E9ix6E4 S596 77,6
Error in line 21: Zs0V3trFRVG A239 53,1
